--- a/pom.xml
+++ b/pom.xml
@@ -29,17 +29,17 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-jar-plugin</artifactId>
-								<configuration>
-									<archive>
-										<manifestEntries>
-											<Main-Class>ru.practicum.main-service.MainServer</Main-Class>
-										</manifestEntries>
-									</archive>
-								</configuration>
-							</plugin>
+<!--							<plugin>-->
+<!--								<groupId>org.apache.maven.plugins</groupId>-->
+<!--								<artifactId>maven-jar-plugin</artifactId>-->
+<!--								<configuration>-->
+<!--									<archive>-->
+<!--										<manifestEntries>-->
+<!--											<Main-Class>ru.practicum.main-service.MainServer</Main-Class>-->
+<!--										</manifestEntries>-->
+<!--									</archive>-->
+<!--								</configuration>-->
+<!--							</plugin>-->
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
