--- a/pom.xml
+++ b/pom.xml
@@ -29,18 +29,6 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-<!--							<plugin>-->
-<!--								<groupId>org.apache.maven.plugins</groupId>-->
-<!--								<artifactId>maven-jar-plugin</artifactId>-->
-<!--								<configuration>-->
-<!--									<archive>-->
-<!--										<manifestEntries>-->
-<!--											<Main-Class>ru.practicum.main-service.MainServer</Main-Class>-->
-<!--										</manifestEntries>-->
-<!--									</archive>-->
-<!--								</configuration>-->
-<!--							</plugin>-->
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -163,20 +151,20 @@
 			</plugins>
 		</pluginManagement>
 
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>org.springframework.boot</groupId>-->
+<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<excludes>-->
+<!--						<exclude>-->
+<!--							<groupId>org.projectlombok</groupId>-->
+<!--							<artifactId>lombok</artifactId>-->
+<!--						</exclude>-->
+<!--					</excludes>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
 	</build>
 
 	<profiles>
@@ -216,11 +204,11 @@
 		</profile>
 	</profiles>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-	</dependencies>
+<!--	<dependencies>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--		</dependency>-->
+<!--	</dependencies>-->
 
 </project>
