--- a/stats-service/stats-dto/pom.xml
+++ b/stats-service/stats-dto/pom.xml
@@ -11,8 +11,21 @@
 
     <artifactId>stats-dto</artifactId>
     <packaging>jar</packaging>
-<!--    <build>-->
-<!--    </build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>ru.practicum.StatsServer</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
