--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - SPRING_DATASOURCE_USERNAME=dbuser
       - SPRING_DATASOURCE_PASSWORD=12345
     depends_on:
-      stats-db:
-        condition: service_healthy
+    - stats-db
+        #condition: service_healthy
   stats-db:
     image: postgres:16.1
     container_name: jewm_stats_db
@@ -32,7 +32,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:6543/jewm
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://jewm-db:6543/jewm #!!!
       - SPRING_DATASOURCE_USERNAME=dbuser
       - SPRING_DATASOURCE_PASSWORD=12345
       - EWM-STATS-SERVICE_URL=http://stats-server:9090
