--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-debug=true
+#debug=true
 server.port=8080
 
 client.url=http://stats-server:9090
@@ -13,6 +13,6 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ewm-db:6543/jewm 
+spring.datasource.url=jdbc:postgresql://jewm-db:6543/jewm 
 spring.datasource.username=dbuser
 spring.datasource.password=12345
