--- a/stats-service/stats-server/src/main/resources/application.properties
+++ b/stats-service/stats-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
+#spring.sql.init.schema-locations=classpath:schema.sql
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
