--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,58 @@
 services:
   stats-server:
+    build: ./stats/stats-server
+    container_name: jewm_stats_service_container
     ports:
       - "9090:9090"
-
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
+      - SPRING_DATASOURCE_USERNAME=dbuser
+      - SPRING_DATASOURCE_PASSWORD=12345
+    depends_on:
+      - stats-db
+      #condition: service_healthy
   stats-db:
     image: postgres:16.1
+    container_name: jewm_stats_db
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=12345
+      - POSTGRES_DB=stats
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
   ewm-service:
+    build: main-service
+    container_name: jewm_service_container
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://jewm-db:6543/jewm #!!!
+      - SPRING_DATASOURCE_USERNAME=dbuser
+      - SPRING_DATASOURCE_PASSWORD=12345
+      - EWM-STATS-SERVICE_URL=http://stats-server:9090
+    depends_on:
+      stats-db:
+        condition: service_healthy
+      ewm-db:
+        condition: service_healthy
 
   ewm-db:
     image: postgres:16.1
+    container_name: jewm_db
+    ports:
+      - "6543:6543"
+    environment:
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=12345
+      - POSTGRES_DB=jewm
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
