--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   stats-server:
     build: ./stats/stats-server
-    container_name: jewm_stats_service_container
+    container_name: ewm_stats_service_container
     ports:
       - "9090:9090"
     environment:
@@ -14,7 +14,7 @@ services:
 
   stats-db:
     image: postgres:16.1
-    container_name: jewm_stats_db
+    container_name: ewm_stats_db
     ports:
       - "5432:5432"
     environment:
@@ -28,12 +28,12 @@ services:
       retries: 10
 
   ewm-service:
-    build: main-service
-    container_name: jewm_service_container
+    build: ./main-service
+    container_name: ewm_service_container
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://jewm-db:6543/jewm #!!!
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
       - SPRING_DATASOURCE_USERNAME=dbuser
       - SPRING_DATASOURCE_PASSWORD=12345
       - EWM-STATS-SERVICE_URL=http://stats-server:9090
@@ -45,13 +45,13 @@ services:
 
   ewm-db:
     image: postgres:16.1
-    container_name: jewm_db
+    container_name: ewm_db
     ports:
-      - "6543:6543"
+      - "6543:5432"
     environment:
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=12345
-      - POSTGRES_DB=jewm
+      - POSTGRES_DB=ewm
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 5s
