--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#debug=true
 server.port=8080
 
 client.url=http://stats-server:9090
@@ -5,6 +6,7 @@ client.url=http://stats-server:9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
@@ -12,6 +14,6 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://jewm-db:6543/jewm 
+spring.datasource.url=jdbc:postgresql://localhost:6543/ewm
 spring.datasource.username=dbuser
 spring.datasource.password=12345
